[project]
name = "langgraph-sidekick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nazer, Mohamed Ilyan", email = "mohamed.ilyan+Boskalis@boskalis.com" }
]
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.23.0",
    "databricks-langchain>=0.6.0",
    "dotenv>=0.9.9",
    "gradio>=5.35.0",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
]

[tool.ruff]
target-version = "py312"
line-length = 130
